# PyRub

./: .gitignore  README.MD  README.txt  pyproject.toml  rubiks.py  setup.cfg  setup.py
pyrub/: __main__.py  cube.py  face.py  functions.py  game.py  main.py  rubiks.py
tests/: cube.py  face.py  game.py  runner.py  test_cube.py  test_face.py  test_game.py  test_pyrub.py
