[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "pyrub"
version = "1.0.0"
description = "A Rubik's Cube Program built in Python 3."

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "pyrub"
version = "1.0.0"
authors = [
  { name="Chris Alexander", email="christopher.j.alexander@vanderbilt.edu" },
]
description = "A Rubik's Cube Program built in Python 3."
readme = "README.md"
requires-python = ">=3.6"