[metadata]
name = PyRub
version = attr: pyrub.VERSION
author = Chris Alexander
author_email = christopher.j.alexander@vanderbilt.edu
description = 'A Rubik\'s Cube Program built in Python 3.'
long_description = file: README.MD
keywords = rubiks cube, cube, puzzle, game
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =pyrub
packages=find:

[options.packages.find]
where=pyrub